Pull request #1224: AG-13432 fix filter description padding
Merge in EXTENSIONS/browser-extension from fix/AG-13432 to master

Squashed commit of the following:

commit 9fbd2d30b34bb1a7c2adefde912a8fedcb30f8f6
Author: Anton <a.kaprielov@adguard.com>
Date:   Mon Mar 28 12:06:24 2022 +0300

    AG-13432 fix padding

commit d0e8aca0bfe9593e9d2dfe2a72fcbb314e74e227
Author: Anton <a.kaprielov@adguard.com>
Date:   Thu Mar 24 16:05:37 2022 +0300

    AG-13432 fix filter desc padding

--- a/Extension/src/pages/options/components/Filters/filter.pcss
+++ b/Extension/src/pages/options/components/Filters/filter.pcss
@@ -45,6 +45,7 @@
     }
 
     &__desc {
+        padding: 4px 0;
         margin-right: 55px;
         color: var(--grayd8);
         font-size: 14px;
